CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(RTX)

SET(CMAKE_CXX_STANDARD 20)

# Inlude
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Classes/Coordinates/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Classes/Entities/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Classes/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib/include)

# Fichier
FILE(GLOB_RECURSE RTX_SOURCES 
    RELATIVE ${CMAKE_SOURCE_DIR}
    *.cpp *.c
)

FILE(GLOB_RECURSE RTX_HEADERS 
    RELATIVE ${CMAKE_SOURCE_DIR}
    *.hpp *.h *.inl
)

LIST(FILTER RTX_SOURCES EXCLUDE REGEX "^out/")
LIST(FILTER RTX_SOURCES EXCLUDE REGEX "^cmake-build-debug/")
LIST(FILTER RTX_HEADERS EXCLUDE REGEX "^out/")
LIST(FILTER RTX_HEADERS EXCLUDE REGEX "^cmake-build-debug/")

ADD_EXECUTABLE(RTX ${RTX_SOURCES} ${RTX_HEADERS})
